# ETF-Portfolio-Transparency-Overlap-Analyzer

./: LICENSE  README.md
.github/workflows/: ci.yml  ci.yml.disabled
backend/: .pre-commit-config.yaml  Data_Contract.md  main.py  pyproject.toml  validation.py
backend/teste/: portifolio_error.csv  portifolio_valid.csv  portifolio_warning.csv  test_upload_endpoint.py
ui/: .lintstagedrc.json  package.json  pnpm-lock.yaml
ui/apps/v4/: package.json  prehook-fail.tsx  source.config.ts  test.tsx  tsconfig.json  valid-test.tsx
ui/templates/start-app/: vite.config.ts
ui/types/: ambient.d.ts
