[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "bielfaria2003@gmail.com",email = "bielfaria2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pandas (>=2.3.3,<3.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
black = "^25.12.0"
isort = "^7.0.0"
pre-commit = "^4.5.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
